--- a/css/style.css
+++ b/css/style.css
@@ -96,8 +96,15 @@ form .submit:hover {
 .col-todo-delete {
   width: 60px;
 }
+.btn-area {
+  display: flex;
+  margin: 0 20px;
+}
 .create-btn-area {
   width: 100%;
   text-align: left;
-  margin: 0 20px;
+}
+.logout-btn-area {
+  width: 100%;
+  text-align: right;
 }
